--- a/.github/workflows/youtube-cards.yml
+++ b/.github/workflows/youtube-cards.yml
@@ -2,17 +2,16 @@ name: GitHub Readme YouTube Cards
 on:
   schedule:
     # Runs every hour, on the hour
-    - cron: "0 * * * *"
+    - cron: '0 * * * *'
   workflow_dispatch:
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
-    # Allow the job to commit to the repository
-    permissions:
-      contents: write
-    # Run the GitHub Readme YouTube Cards action
     steps:
-      - uses: PhuocPhat1005/github-readme-youtube-cards@main
+      - uses: Namronaldo08102004/github-readme-youtube-cards@main
         with:
-          channel_id: UCSB2-go3bsdrDBBV5t6RAWA
+          channel_id: UCD7UqwlMVrtY1wGGNYxYv4g
+          comment_tag_name: YOUTUBE-CARDS
+          youtube_api_key: ${{ secrets.YOUTUBE_API_KEY }}
+          show_duration: true
